[tool.poetry]
name = "simple_example"
version = "0.0.1"
description = "Simple example "
authors = ["Stefanus Kurniawan <stefanus.kurniawan@deakin.edu.au>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
surround = "0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
